Fixes all blackmoves/whitemoves not showing up

--- a/style.css
+++ b/style.css
@@ -93,6 +93,14 @@ body {
 
         }
 
+        /* .whitemove {
+            background-color: rgba(0, 255, 255, 0.432) !important;
+        }
+
+        .blackmove {
+            background-color: rgba(21, 255, 0, 0.432) !important;
+        } */
+
     }
 }
 
